<resources>
    <string name="app_name">Corona World</string>
    <string name="title_world">World Map</string>
    <string name="title_statistic_request">Statistic Chooser</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_history">History</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_germany">Germany (Beta)</string>
    <string name="settings">Settings</string>
    <string name="default_elem_text">No Data</string>
    <string name="menu_item_delete">Delete</string>
    <string name="statistic_call_info">Country: %1$s\nCriteria: %2$s\nChart: %3$s\nTime: %4$s to %5$s</string>
    <string name="iso_country_chooser_title">Choose Countries of which you would like to have a statistic</string>
    <string name="criteria_chooser_title">Choose Criteria after which the statistic is to be made</string>
    <string name="chart_type_chooser_title">Choose the Chart-Type the statistic is supposed to have</string>
    <string name="time_picker_title">Choose the time range of the statistic</string>
    <string name="pick_start_date">Start Date</string>
    <string name="pick_end_date">End Date</string>
    <string name="fab_content_desc">Create Statistic</string>
    <string name="error_title">Error Code: %1$d (%2$s)</string>
    <string name="map_box_content_world">World:\nPopulation:&#160;%1$d (%2$s)\nInfected:&#160;&#160;&#160;&#160;&#160;&#160;%3$d (%4$s)\nActive:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%5$d (%6$s)\nRecovered:&#160;&#160;%7$d (%8$s)\nDeaths:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%9$d (%10$s)</string>
    <string name="map_box_content_germany">Germany:\nPopulation:&#160;%1$d (%2$s)\nInfected:&#160;&#160;&#160;&#160;&#160;&#160;%3$d (%4$s)\nActive:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%5$d (%6$s)\nRecovered:&#160;&#160;%7$d (%8$s)\nDeaths:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%9$d (%10$s)</string>
    <string name="bottom_sheet_description_world">Population: %1$d (%2$s)\nHealthy: %3$d (%4$s)\nInfected: %5$d (%6$s)\nActive: %7$d (%8$s)\nRecovered: %9$d (%10$s)\nDeaths: %11$d (%12$s)\nPopulation-Infected Ratio: %13$s\nInfected-Deaths Ratio: %14$s</string>
    <string name="bottom_sheet_description_germany">Population: %1$d (%2$s)\nHealthy: %3$d (%4$s)\nInfected: %5$d (%6$s)\nDeaths: %7$d (%8$s)\nPopulation-Infected Ratio: %9$s\nInfected-Deaths Ratio: %10$s</string>
    <string name="bottomSheetButtonText">Go to Statistic</string>
    <string name="select_all">Select all</string>
    <string name="un_select_all">Unselect all</string>
    <plurals name="limit_reached">
        <item quantity="one">Limit of %1$d item reached for %2$s</item>
        <item quantity="other">Limit of %1$d items reached for %2$s</item>
    </plurals>
    <string name="empty_list">There are no items in your history</string>
    <string name="info">Info</string>
    <string name="Information">This App was made by Thomas Meier and Aleksandr Stankoski as part of a student Project.\n\nIf you want to add to this Project or report a Bug you can do so on our <a href="https://github.com/aleksn41/corona_world_app">Github</a>.\n\nAPIs used:\n- HEROKU (https://coronavirus-19-api.herokuapp.com)\n- RESTCOUNTRIES(https://restcountries.eu/rest/v2)\n- POSTMANAPI(https://api.covid19api.com)\n- POSTMANAPI(https://api.covid19api.com)\n- ARCGIS(https://opendata.arcgis.com)\n\nLibraries used:\n- okhttp3\n- varunest:sparkbutton\n- PhilJay:MPAndroidChart\n- michaelfotiadis:android-country-flags\n\n Thank you for using our App\n\nMore Information can be found on our <a href="https://github.com/aleksn41/corona_world_app">Github</a></string>
    <string name="no_data">No data available!</string>
    <string name="now">Now</string>
    <string name="icon_to_expand_view_description">Icon to expand View with information of the currently selected country</string>
    <string name="no_country_selected">No Country Selected</string>
    <string name="flag_currently_selected_country">Flag of currently selected Country</string>
    <string name="criteria">Criteria</string>
    <string name="chart_type">Chart-Type</string>
    <string name="countries">Countries</string>
</resources>