<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_world"
        android:icon="@drawable/ic_world_24dp"
        android:title="@string/title_world" />

    <item
        android:id="@+id/navigation_germany"
        android:icon="@drawable/germany_flag"
        android:title="@string/title_germany"/>

    <item
        android:id="@+id/navigation_statistic_request"
        android:icon="@drawable/ic_bar_chart_24dp"
        android:title="@string/title_statistic" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_favourites_star24dp"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_backlog_dp24"
        android:title="@string/title_history" />


</menu>